--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header id='shop-header'>
     <div id="header-logo">
       <div id='logo'>
-        <a href="index.html" class="standard-logo" data-dark-logo="assets/logo-dark.png">
-          <img src="" alt="Logo"></a>
+        <a href="index.html" class="standard-logo" data-dark-logo="assets/google_logo.png">
+          <img src="assets/google_logo.png" alt="Logo"></a>
       </div>
     </div>
   </header>
