--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header-logo">
       <div id='logo'>
         <a href="index.html" class="standard-logo" data-dark-logo="assets/google_logo.png">
-          <img src="assets/google_logo.png" alt="Logo"></a>
+          <img id="logo-image" src="assets/google_logo.png" alt="Logo"></a>
       </div>
     </div>
   </header>
